--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
   display: block;
   box-sizing: border-box;
   margin: 0;
