basics of animation for statistics page
also made the html take up the entire page in the globals.css and layout.jsx.

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,10 @@
   --foreground: rgb(229 231 235);
 }
 
+html {
+    height: 100%;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
