--- a/app/globals.css
+++ b/app/globals.css
@@ -30,10 +30,10 @@ body {
   @apply text-lg leading-loose;
 }
 
-section {
+/* section {
   background: var(--background);
   color: var(--foreground);
-}
+} */
 
 .center-text {
   @apply w-[95vw] sm:w-3/4 md:w-2/3 lg:w-1/2 xl:w-2/5 text-center;
