--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
+@tailwind utilities;
 
 :root {
   --background: rgb(229 231 235); /*tw gray-200*/
@@ -20,7 +20,7 @@
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
@@ -34,7 +34,7 @@ body {
   @apply text-lg leading-loose;
 }
 
-section.bg {
+section {
   background: var(--background);
   color: var(--foreground);
 }
