--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Dream Avenue';
+  src: url('../public/fonts/FontsFree-Net-Dream-Avenue.ttf')
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
