--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Dream Avenue';
-  src: url('../public/fonts/FontsFree-Net-Dream-Avenue.ttf')
+@layer base {
+  @font-face {
+    font-family: 'Dream Avenue';
+    src: url('../public/fonts/FontsFree-Net-Dream-Avenue.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 }
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
