--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@ main {
   @apply bg-white/85;
 }
 
-.triangle-clip-path {
+.katherine-triangle-clip-path {
    clip-path: polygon(70% 0, 85% 50%, 70% 100%, 0 100%, 0 0);
 }
 
